--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -7,7 +7,6 @@ env:
 on:
   push:
     branches:
-      - 'master'
       - 'main'
     tags:
       - '!*' # Do not execute on tags
@@ -25,7 +24,7 @@ concurrency:
 
 jobs:
   test:
-    name: Specs with Coverage - Ruby ${{ matrix.ruby }} ${{ matrix.name_extra || '' }}
+    name: Specs with Coverage - Ruby ${{ matrix.ruby }}
     if: "!contains(github.event.commits[0].message, '[ci skip]') && !contains(github.event.commits[0].message, '[skip ci]')"
     env: # $BUNDLE_GEMFILE must be set at the job level, so it is set for all steps
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
